@@ -9011,6 +9011,11 @@ function(package, dir, lib.loc = NULL, chkInternal = FALSE)
     for(nm in names(db)) {
         rd <- db[[nm]]
 
+        ## \description is mandatory except for package overviews
+        missing_description <-
+            !identical("package", .Rd_get_doc_type(rd)) &&
+            "\\description" %notin% RdTags(rd)
+
         ## Arguments with no description.
         arg_table <- .Rd_get_argument_table(rd)
         arguments_with_no_description <-
@@ -9021,10 +9026,12 @@ function(package, dir, lib.loc = NULL, chkInternal = FALSE)
         offending_autogenerated_content <-
             .Rd_get_offending_autogenerated_content(rd)
 
-        if(length(arguments_with_no_description)
+        if(missing_description
+           || length(arguments_with_no_description)
            || length(offending_autogenerated_content)) {
             out[[nm]] <-
-                list(arguments_with_no_description =
+                list(missing_description = missing_description,
+                     arguments_with_no_description =
                      arguments_with_no_description,
                      offending_autogenerated_content =
                      offending_autogenerated_content)
@@ -9039,7 +9046,8 @@ function(x, ...)
 {
     .fmt <- function(nm) {
         y <- x[[nm]]
-        c(if(length(arguments_with_no_description <-
+        c(character(),
+          if(length(arguments_with_no_description <-
                     y[["arguments_with_no_description"]])) {
               c(gettextf("Argument items with no description in Rd object '%s':",
                          nm),
@@ -9050,11 +9058,14 @@ function(x, ...)
               c(gettextf("Auto-generated content requiring editing in Rd object '%s':",
                          nm),
                 sprintf("  %s", offending_autogenerated_content[, 1L]))
-          },
-          "")
+          })
     }
 
-    as.character(unlist(lapply(names(x), .fmt)))
+    c(character(),
+      if (length(res <- which(vapply(x, `[[`, TRUE, "missing_description"))))
+          c(gettext("Rd objects without \\description:"),
+            .pretty_format(names(res))),
+      as.character(unlist(lapply(names(x), .fmt))))
 }
 
 ### * .check_Rd_line_widths
