@@ -97,6 +97,16 @@ sm <- findMethods(show, where= as.environment("package:myTst"))
 stopifnot(sm@names == "foo")
 unlink("myTst_*")
 
+## test warnings for missing/autogenerated Rd content
+owd <- setwd("myTst")  # (currently) needed for \Sexpr macros
+print(res <- tools::checkRdContents(dir = "."))
+stopifnot(exprs = {
+    res[["foo-class"]]$missing_description  # was part of checkRd() in R < 4.4.0
+    ## FIXME: should also warn about auto-generated promptPackage() content
+})
+setwd(owd)
+
+
 ## getPackageName()  for "package:foo":
 require('methods')
 library(tools)
